tests/success/move_construct_double_destruct.bz
import resource;

function test()
{
	(consteval {
		let v = [complex_resource_t]();
		let _ = move v;
		let v = [32: complex_resource_t]();
		let _ = move v;
		let v = [2: complex_resource_t]();
		let _ = move v;
		let v = complex_resource_t();
		let _ = move v;
	});
}
