tests/error/type_match/base_case_void_array_slice.bz
function test()
{
	let arr = [4: int32]();
	let _: [: void] = arr;
}
